redid overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -19,16 +19,16 @@
   background: #555;
 }
 .App{
-  width:100vw;
-  height:100vh;
+  width:100%;
+  height:100%;
+  max-height:100%;
   overflow: hidden;
 }
 .App-header {
   background-color: #282c34;
   justify-content: left;
   width: 100vw;
-  height: 8vh;
-  padding: 1vh 0;
+  height: 10vh;
   color: white;
 }
 .App-header-elem{
@@ -48,7 +48,6 @@
 .content-wrapper{
   width: 100%;
   height: 100%;
-  padding: 0 1vw;
 }
 .main-container{
   width:100vw;
